Set up Python version for deployment

--- a/.github/workflows/deploy-generate.yml
+++ b/.github/workflows/deploy-generate.yml
@@ -52,6 +52,11 @@ jobs:
       # Check out GitHub repo
       - uses: actions/checkout@v3
 
+      # Set up Python3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
       # Create Lambda zip deployment
       - name: Create Lambda Zip Package
         run: deploy/deploy-lambda.sh ${SCRIPT_NAME_ENV}
